ejemplo columnas extra small

--- a/grid.html
+++ b/grid.html
@@ -4,9 +4,15 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, user-scalable=no" />
         <title>Usando Bootstrap con Grids</title>
-        <link rel="stylesheet" type="text/css" href="grid.css">
+        <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="grid.css" />
     </head>
     <body>
-
+    	<div id="contenedor" class="row">
+    		<div class="col col-xs-3">Columna 1</div>
+    		<div class="col col-xs-3">Columna 2</div>			
+    		<div class="col col-xs-3">Columna 3</div>			
+    		<div class="col col-xs-3">Columna 4</div>						
+    	</div>	
     </body>
 </html>
