--- a/grid.html
+++ b/grid.html
@@ -8,11 +8,27 @@
         <link rel="stylesheet" type="text/css" href="grid.css" />
     </head>
     <body>
-    	<div id="contenedor" class="row">
-    		<div class="col col-xs-3">Columna 1</div>
-    		<div class="col col-xs-3">Columna 2</div>			
-    		<div class="col col-xs-3">Columna 3</div>			
-    		<div class="col col-xs-3">Columna 4</div>						
-    	</div>	
+
+    	<h4 class="visible-lg">Desktop Large (LG)</h4>
+    	<h4 class="visible-md">Desktop Medium (MD)</h4>
+    	<h4 class="visible-sm">Tablets (SM)</h4>
+    	<h4 class="visible-xs">Phones (XS)</h4>
+
+    	<div class=" contenedor row">
+    		<div class="col col-lg-3 col-sm-6">Columna 1</div>
+    		<div class="col col-lg-3 col-sm-6">Columna 2</div>		
+    		<div class="col col-lg-3 col-sm-6">Columna 3</div>	
+    		<div class="col col-lg-3 col-sm-6">Columna 4</div>
+    	</div>
+
+    	<div class=" contenedor row">
+    		<div class="col col-xs-12" >
+    			Esta columna siempre ocupa 12.
+    			<div class="row contenedor">
+    				<div class="col col-sm-6">Una columna</div>
+    				<div class="col col-sm-6">Una columna</div>
+    			</div>
+    		</div>
+    	</div>
     </body>
 </html>
